fix nav on mobile and fix palette color styles and add margin helper classes

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -6,6 +6,15 @@ body {
 	}
 }
 
+//customizable margin mixins
+.margin {
+	@include margin(20px 0);
+}
+
+.margin-bottom {
+	@include margin(0 0 40px 0);
+}
+
 ul {
 	margin: 0;
 	padding: 0;
